Update and rename simpsons_index_dark.html to index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="wrap">
   <header>
     <div>
-      <h1>Die Simpsons — Checkliste</h1>
+      <h1>ALF — Checkliste</h1>
       <div class="subtitle">Automatisch aus deiner Playlist · global synchronisiert via Firebase</div>
     </div>
     <div class="top-right">
@@ -124,7 +124,7 @@
 
 <script>
 /* CONFIG */
-const PLAYLIST_URL = "https://raw.githubusercontent.com/Elias3422/Hhh/main/simi_simpsons_only.m3u8";
+const PLAYLIST_URL = "https://raw.githubusercontent.com/Elias3422/Hhh/main/tv_channels_ALF_DE_only-1.m3u8";
 const PROXY_BASE   = "https://simpsons-proxy2.zeabur.app"; // Zeabur proxy (MKV->MP4)
 
 /* Firebase config (your project) */
